# tkde-app

./: .gitignore  CMakeLists.txt  README.md  fix_exc.py
config/: app.conf.in
include/: appstore.hpp  config.hpp  display.hpp  distro.hpp  gpu.hpp  kde.hpp  logger.hpp  shell.hpp  termux.hpp  ui.hpp
src/: main.cpp
src/appstore/: appstore.cpp
src/core/: config.cpp  distro.cpp  logger.cpp  shell.cpp
src/display/: display.cpp
src/gpu/: gpu.cpp
src/kde/: kde.cpp
src/termux/: termux.cpp
src/ui/: screen.cpp
